refactor: apply Alibaba Java coding standards across codebase
- Add/update Javadoc comments for public APIs
- Fix naming conventions and formatting
- Remove wildcard imports
- Add proper null checks and error handling
- Ensure thread-safe logging where applicable
- Add missing @Override annotations
- Fix test method naming to follow conventions